--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
         <div class="service-item position-relative text-center">
           <div class="photo">
-            <img src="assets/img/servise logo/data-analysis-concept-vector-25125673.jpg" alt="Service Photo 1" class="photo-img">
+            <img src="assets/img/data-analysis-concept-vector-25125673.jpg" alt="Service Photo 1" class="photo-img">
           </div>
           <h4><a href="assets/img/servise logo/ml.png" class="stretched-link">Data Analysis & Business Analysis</a></h4>
           <p>Transform raw data into actionable insights to drive strategic decisions.</p>
@@ -168,7 +168,7 @@
       <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
         <div class="service-item position-relative text-center">
           <div class="photo">
-            <img src="assets/img/servise logo/ml.png" alt="Service Photo 2" class="photo-img">
+            <img src="assets/img/ml.png" alt="Service Photo 2" class="photo-img">
           </div>
           <h4><a href="" class="stretched-link">Machine Learning Solutions & Deep Learning Models</a></h4>
           <p>Develop and deploy predictive models and advanced algorithms for complex data challenges.</p>
@@ -178,7 +178,7 @@
       <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
         <div class="service-item position-relative text-center">
           <div class="photo">
-            <img src="assets/img/servise logo/chatbot.avif" alt="Service Photo 3" class="photo-img">
+            <img src="assets/img/chatbot.avif" alt="Service Photo 3" class="photo-img">
           </div>
           <h4><a href="" class="stretched-link">Chatbots & AI Assistants & NLP Solutions</a></h4>
           <p>Create intelligent systems for enhanced customer interactions and natural language understanding.</p>
@@ -188,7 +188,7 @@
       <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
         <div class="service-item position-relative text-center">
           <div class="photo">
-            <img src="C:\Users\Akashay\Downloads\Arsha\SwapTech Analytics\assets\img\servise logo\llm.jpg" alt="Service Photo 4" class="photo-img">
+            <img src="assets/img/llm.jpg" alt="Service Photo 4" class="photo-img">
           </div>
           <h4><a href="" class="stretched-link">Large Language Models (LLMs)</a></h4>
           <p>Build and integrate sophisticated language models for advanced text generation and comprehension.</p>
