--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Home</title>
-  <link rel="shortcut icon" type ="x-icon" href="twitter.png"
+  <link rel="shortcut icon" type ="x-icon" href="assets/img/logo/any2.png"
   <meta name="description" content="">
   <meta name="keywords" content="">
 
