--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            <p>At SwapTech Analytics, we empower businesses with innovative, data-driven solutions tailored to their needs. Our expertise spans data analysis, business insights, and cutting-edge AI technologies. We specialize in developing machine learning solutions and deep learning models for a wide range of applications. Additionally, we create custom chatbots, AI assistants, and NLP-based tools to enhance customer interactions. Our team also excels in building advanced large language models (LLMs) for complex, scalable tasks. </p>
             <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
