--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
+
+<title>SwapTech Analytics</title>
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "SwapTech Analytics",
+    "alternateName": "SwapTech",
+    "url": "https://example.com/",
+    "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://query.example.com/search?q={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+    }
+}
+</script>
+
+
+  
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
