--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     "@type": "WebSite",
     "name": "SwapTech Analytics",
     "alternateName": "SwapTech",
-    "url": "https://example.com/",
+    "url": "http://swaptechanalytics.in/",
     "potentialAction": {
         "@type": "SearchAction",
         "target": {
             "@type": "EntryPoint",
-            "urlTemplate": "https://query.example.com/search?q={search_term_string}"
+            "urlTemplate": "http://swaptechanalytics.in/search?q={search_term_string}"
         },
         "query-input": "required name=search_term_string"
     }
