--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Home</title>
   <link rel="shortcut icon" type ="x-icon" href="assets/img/logo/any2.png"
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="SwapTech Analytics">
+  <meta name="keywords" content="SwapTech Analytics">
 
 
 <title>SwapTech Analytics</title>
