--- a/index.html
+++ b/index.html
@@ -619,7 +619,8 @@ Ready to unlock the full potential of your data? Contact us today to explore how
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <p>business@swaptechanalytics.in
+</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -666,7 +667,8 @@ Ready to unlock the full potential of your data? Contact us today to explore how
             <p>Saroli,nesari,Gadhinglaj,kolhapur</p>
             <p>maharashtra,India. pin code - 416504</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+91 8767575090</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong> <span>business@swaptechanalytics.in
+</span></p>
           </div>
         </div>
 
